--- a/sample.yml
+++ b/sample.yml
@@ -6,24 +6,24 @@
     ping:
   - name: Install apache 2 on nodes
     apt:
-     name: apache2
+     name: "{{mywebpackonubuntu}}"
      state: present
     when: ansible_os_family=="Debian"
 
   - name: I want to start apache server
     service:
-     name: apache2
+     name: "{{mywebpackonubuntu}}"
      state: started
     when: ansible_os_family=="Debian"
   
   - name: I want to install apache2 on Redhat
     yum:
-     name: httpd
+     name: "{{mywebpackonredhat}}"
      state: present
     when: ansible_os_family=="RedHat"
 
   - name: I want to start webserver on Redhat
     service:
-     name: httpd
+     name: "{{mywebpackonredhat}}"
      state: started
     when: ansible_os_family=="RedHat"
