--- a/installjava.yml
+++ b/installjava.yml
@@ -5,11 +5,11 @@
   - name:Install java on ubuntu
     apt:
      name: "{{myjavaonubuntu}}"
-     state: Latest
+     state: present
     when: ansible_os_family =="Debian"
   
   -name: Install java on Redhat
    yum:
     name:"{{myjavaonredhat}}"
-    state: Latest
+    state: present
    when: ansible_os_family =="RedHat"
