--- a/mytomrole/tasks/main.yml
+++ b/mytomrole/tasks/main.yml
@@ -3,3 +3,7 @@
 - include_tasks: myuser.yml
 - include_tasks: installjava.yml
 - include_tasks: downloadtomcat.yml
+- include_tasks: permission.yml
+- include_tasks: tomcatDashboard.yml
+- include_tasks: mytomcatStart.yml
+
