--- a/mytomrole/tasks/mytomcatStart.yml
+++ b/mytomrole/tasks/mytomcatStart.yml
@@ -2,6 +2,6 @@
 - name: I want to start tomcat
   systemd:
     state: started
-    daemon_reload: yes 
+    daemon_reload: true 
     name: tomcat
-    enabled: yes 
+    enabled: true 
